  * creole: New plugin from Bernd Zeimetz. Closes: #486930
  * aggregate: Add template parameter.
  * Add support for the universal edit button <http://universaleditbutton.org/>
    (To get this on all pages of an exiting wiki, rebuild the wiki.)
  * txt: New plugin, contributed by Gabriel McManus.
  * smiley: Generate links relative to the destpage. (Fixes a reversion from
    2.41.)

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Jun 2008 15:03:33 -0400

ikiwiki (2.50) unstable; urgency=low

  * img: Support captions.
  * img: Don't generate empty title attributes, etc.
  * img: Allow setting defaults for class and id too.
  * ikiwiki-mass-rebuild: Make group list comparison more robust.
  * search: Work around xapian bug #486138 by only stemming locales
    in a whitelist.

 -- Joey Hess <joeyh@debian.org>  Fri, 13 Jun 2008 15:17:30 -0400

ikiwiki (2.49) unstable; urgency=low

  * haiku: Generate valid xhtml.
  * ikiwiki-mass-rebuild: Don't trust $! when setting $)
  * inline: The optimisation in 2.41 broke nested inlines. Detect those
    and avoid overoptimising.
  * search: Converted to use xapian-omega.
  * Filter hooks are no longer called during the scan phase. This will
    prevent wikilinks added by filters from being scanned properly. But
    no known filter hook does that, so let's not waste time on it.
  * Pass a destpage parameter to the sanitize hook.
  * The search interface now allows searching for a page by title
    ("title:foo"), as well as for pages that contain a given link
    ("link:bar").

 -- Joey Hess <joeyh@debian.org>  Sat, 07 Jun 2008 15:22:41 -0400

ikiwiki (2.48) unstable; urgency=high

  * Fix security hole that occurred if openid and passwordauth were both
    enabled. passwordauth would allow logging in as a known openid, with an
    empty password. Closes: #483770 (CVE-2008-0169)
  * Add rel=nofollow to edit links. This may prevent some spiders from
    pounding on the cgi following edit links.